<resources>
    <string name="app_name">SnappyChat</string>
    <string name="facebook_app_id">369521223399855</string>
    <string name="fb_login_protocol_scheme">fb369521223399855</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Signing In</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="nick_name">Nick Name</string>
    <string name="user_email">User Email</string>
    <string name="user_status">User Status</string>
    <string name="accept_button">Accept Button</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends">Friends</string>
    <string name="reject_button">Reject Button</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="userStatusMessage">User Status</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="online_or_offline">Online_Offline</string>
</resources>
